metadata/src/objects/ForceeaAsyncNotification__e.object
<CustomObject>
    <fields>
        <fullName>BatchId__c</fullName>
        <label>Batch ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobHasFailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job has failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>Job ID</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobIsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job is completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobIsTerminated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job is terminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobUnitsExecuted__c</fullName>
        <label>Job units executed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jobs__c</fullName>
        <description>The number of jobs in the process.</description>
        <label>Jobs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OperationType__c</fullName>
        <description>The process opration types are: insert and delete.</description>
        <label>Operation type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessId__c</fullName>
        <label>Process ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessUnitsToExecute__c</fullName>
        <label>Process Units to execute</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalJobUnits__c</fullName>
        <label>Total job units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ForceeaAsync Notification</label>
    <pluralLabel>ForceeaAsync Notifications</pluralLabel>
</CustomObject>